# paint_opengl

./: .gitignore  CMakeLists.txt  README.md  botao.h  fechoConvexo.c  interface.c  interface.h  linha.c  linha.h  main.c  poligono.c  poligono.h  ponto.c  ponto.h  state.h  transformacoes.c  transformacoes.h
